[package]
name = "chronovault"
version = "0.1.0"
description = "Decentralized time-locked execution protocol for Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/chronovault/protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "chronovault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
